# knixtools

./: CMakeLists.txt  LICENSE  README.md  make.sh
doc/: 7zcd.1  7zdec.1  7zenc.1  7zetools.md  7zfind.1  7zlist.1  7zopen.1  7zpass.1  agentusage.1  commoncrawl.1  liveinstall.md  nspell-gpt.1  nspell-gpt.md  sget.1  sget.md  tenv.1  tenv.md
